# DT_minting_canister

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/DT_minting_canister/: .env  Cargo.toml  DT_minting_canister.did
src/DT_minting_canister/src/: lib.rs  logs.rs  types.rs
src/DT_minting_canister_backend/: Cargo.toml
src/DT_minting_canister_frontend/src/: index.html  index.js
